richard chesterwood kubernetes/pranaam-kubernetes-mysql/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /pranaam-kubernetes/*
        backend:
          serviceName: pranaam-kubernetes
          servicePort: 8081
